[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/menu_background.png" type="Texture" id=1]
[ext_resource path="res://timesbd.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Menu.gd" type="Script" id=3]
[ext_resource path="res://assets/buttons1.png" type="Texture" id=4]
[ext_resource path="res://assets/buttons.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 44
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 250, 66 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.847059, 0.345098, 0.180392, 1 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 250, 66 )

[sub_resource type="DynamicFont" id=5]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 250, 66 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.847059, 0.345098, 0.180392, 1 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 250, 66 )

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 250, 66 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.847059, 0.345098, 0.180392, 1 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 250, 66 )

[sub_resource type="DynamicFont" id=13]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 250, 66 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.847059, 0.345098, 0.180392, 1 )

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 250, 66 )

[sub_resource type="DynamicFont" id=17]
size = 24
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 562, 300 )
texture = ExtResource( 1 )

[node name="Game Name" type="Label" parent="."]
margin_left = 388.0
margin_top = 94.0
margin_right = 772.0
margin_bottom = 238.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Monuments of India"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
margin_left = 436.0
margin_top = 240.0
margin_right = 686.0
margin_bottom = 306.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaderboard" type="Button" parent="."]
margin_left = 440.0
margin_top = 326.0
margin_right = 690.0
margin_bottom = 392.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
text = "Leaderboard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_left = 437.0
margin_top = 498.0
margin_right = 687.0
margin_bottom = 564.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help_About" type="Button" parent="."]
margin_left = 437.0
margin_top = 412.0
margin_right = 687.0
margin_bottom = 478.0
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
custom_fonts/font = SubResource( 17 )
text = "Help / About"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Leaderboard" to="." method="_on_Leaderboard_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Help_About" to="." method="_on_Help_About_pressed"]
